<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff"
    tools:context="created.by.yomibass.created.by.yomibass.VendorLogin">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:id="@+id/barlayout"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:theme="@style/ToolbarTheme"
                android:background="#040e67"
                android:id="@+id/toolbar">
            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/vendor_login_bg"
            android:layout_below="@+id/barlayout"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Vendors"
                android:textColor="#ffffff"
                android:textStyle="normal"
                android:textSize="50dp"
                android:layout_marginBottom="30dp"/>

        </LinearLayout>

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:srcCompat="@drawable/main_vendors"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="180dp"
            android:id="@+id/img"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img"
            android:orientation="vertical"
            android:id="@+id/lin1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_email"
                android:textStyle="italic"
                android:textColor="#000000"
                android:textSize="12dp"
                android:paddingLeft="20dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:srcCompat="@drawable/mail_icon"
                    android:layout_marginLeft="20dp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#ededed"
                    android:layout_marginLeft="10dp"
                    android:textColor="#000000"
                    android:textSize="12dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:id="@+id/email"/>
            </LinearLayout>
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lin1"
            android:orientation="vertical"
            android:id="@+id/lin2"
            android:layout_marginTop="30dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_password"
                android:textStyle="italic"
                android:textColor="#000000"
                android:textSize="12dp"
                android:paddingLeft="20dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:srcCompat="@drawable/password"
                    android:layout_marginLeft="20dp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#ededed"
                    android:layout_marginLeft="10dp"
                    android:textColor="#000000"
                    android:textSize="12dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:inputType="textPassword"
                    android:id="@+id/password"/>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:background="@drawable/rounded_green"
            android:layout_below="@+id/lin2"
            android:id="@+id/btn"
            android:text="@string/login"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:onClick="dashboard"/>

        <ProgressBar
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:visibility="invisible"
            android:id="@+id/progressBar"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn"
            android:layout_centerHorizontal="true"
            android:text="@string/forgot_password"
            android:textStyle="italic"
            android:textSize="12dp"
            android:textColor="#000000"
            android:id="@+id/forgotpass"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/forgotpass"
            android:layout_centerInParent="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dont_have"
                android:textStyle="italic"
                android:textSize="12dp"
                android:textColor="#e30615"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:textStyle="italic"
                android:textSize="12dp"
                android:textColor="#e30615"
                android:onClick="vendorsignup1"/>
        </LinearLayout>

    </RelativeLayout>



</LinearLayout>
